# ttfi

./: .gitignore  README.md  ttfi.cabal
macros/src/main/scala/debug/: DebugMacro.scala
project/: Build.scala
src/: CBAny.hs  CPS.hs  ExtF.hs  FlatF.hs  FlatI.hs  Intro1.hs  Intro3.hs  LG.hs  LinearLC.hs  PrintScanF.hs  PushNegFExt.hs  PushNegFI.hs  PushNegI.hs  Serialize.hs  TTFdB.hs  TTFdBHO.hs  Typ.hs
src/haskell/: CB98.hs  HOCCG.hs  Intro2.hs  IntroHOIF.hs  IntroHOT.hs  PushNegF.hs  SerializeExt.hs  TDPE.hs  TTF.hs  TTIF.hs  ToTDPE.hs  TypeCheck.hs
src/scala/ttfi/: ExtF.scala  ExtI.scala  FlatF.scala  FlatI.scala  Intro1.scala  Intro2.scala  Intro3.scala  IntroHOIF.scala  IntroHOT.scala  Main.scala  PushNegF.scala  PushNegFExt.scala  PushNegFI.scala  PushNegI.scala  Serialize.scala  SerializeExt.scala  TTFdB.scala  package.scala
