name:                ttfi
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Mark Hopkins
maintainer:          markjohnhopkins@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Intro1
                     , Intro2
                     , Intro3
                     , ExtI
                     , ExtF
                     , Serialize
                     , SerializeExt
                     , PushNegI
                     , PushNegF
                     , PushNegFExt
                     , FlatI
                     , FlatF
                     , PushNegFI
                     , IntroHOT
                     , IntroHOIF
                     , TTFdB
                     , TTF
                     , TTIF
                     , TTFdBHO
                     , TypeCheck
                     , Typ
                     , CPS
                     , TDPE
                     , ToTDPE
                     , LinearLC
                  --   , HOCCG
                     , LG
                     , CBAny
                     , CB98
                     , PrintScanF
                     
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
                     , mtl >= 2.2.0.1
                     , pretty >= 1.1.1.0
  hs-source-dirs:      src/haskell
  default-language:    Haskell2010
